// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneOverview devices is optional 1`] = `
<DocumentFragment>
  <div
    class="mb-3 accordion"
  >
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="true"
          class="accordion-button"
          type="button"
        >
          Living room
        </button>
      </h2>
      <div
        class="accordion-collapse collapse show"
      >
        <div
          class="accordion-body"
        >
          <ul>
            <li>
              id: -MpGOkgR4zExLBUDUafq
            </li>
            <li>
              temp: 21°
            </li>
            <li>
              type: radiator
            </li>
            <li>
              comfort: 22°
            </li>
            <li>
              eco: 16°
            </li>
            <li>
              temp: 21°
            </li>
            <li>
              power: true
            </li>
            <li>
              mode: manual
            </li>
            <li>
              devices: 0
            </li>
            <ul />
          </ul>
          <div
            class="mt-2 btn-group btn-group-lg"
            role="group"
          >
            <input
              autocomplete="off"
              checked=""
              class="btn-check"
              id="radio-off"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="off"
            />
            <label
              class="btn btn-primary"
              for="radio-off"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-power-off fa-w-16 "
                data-icon="power-off"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
                  fill="currentColor"
                />
              </svg>
               Off
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-0"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="ice"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-0"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-snowflake fa-w-14 "
                data-icon="snowflake"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M440.3 345.2l-33.8-19.5 26-7c8.2-2.2 13.1-10.7 10.9-18.9l-4-14.9c-2.2-8.2-10.7-13.1-18.9-10.9l-70.8 19-63.9-37 63.8-36.9 70.8 19c8.2 2.2 16.7-2.7 18.9-10.9l4-14.9c2.2-8.2-2.7-16.7-10.9-18.9l-26-7 33.8-19.5c7.4-4.3 9.9-13.7 5.7-21.1L430.4 119c-4.3-7.4-13.7-9.9-21.1-5.7l-33.8 19.5 7-26c2.2-8.2-2.7-16.7-10.9-18.9l-14.9-4c-8.2-2.2-16.7 2.7-18.9 10.9l-19 70.8-62.8 36.2v-77.5l53.7-53.7c6.2-6.2 6.2-16.4 0-22.6l-11.3-11.3c-6.2-6.2-16.4-6.2-22.6 0L256 56.4V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v40.4l-19.7-19.7c-6.2-6.2-16.4-6.2-22.6 0L138.3 48c-6.3 6.2-6.3 16.4 0 22.6l53.7 53.7v77.5l-62.8-36.2-19-70.8c-2.2-8.2-10.7-13.1-18.9-10.9l-14.9 4c-8.2 2.2-13.1 10.7-10.9 18.9l7 26-33.8-19.5c-7.4-4.3-16.8-1.7-21.1 5.7L2.1 145.7c-4.3 7.4-1.7 16.8 5.7 21.1l33.8 19.5-26 7c-8.3 2.2-13.2 10.7-11 19l4 14.9c2.2 8.2 10.7 13.1 18.9 10.9l70.8-19 63.8 36.9-63.8 36.9-70.8-19c-8.2-2.2-16.7 2.7-18.9 10.9l-4 14.9c-2.2 8.2 2.7 16.7 10.9 18.9l26 7-33.8 19.6c-7.4 4.3-9.9 13.7-5.7 21.1l15.5 26.8c4.3 7.4 13.7 9.9 21.1 5.7l33.8-19.5-7 26c-2.2 8.2 2.7 16.7 10.9 18.9l14.9 4c8.2 2.2 16.7-2.7 18.9-10.9l19-70.8 62.8-36.2v77.5l-53.7 53.7c-6.3 6.2-6.3 16.4 0 22.6l11.3 11.3c6.2 6.2 16.4 6.2 22.6 0l19.7-19.7V496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-40.4l19.7 19.7c6.2 6.2 16.4 6.2 22.6 0l11.3-11.3c6.2-6.2 6.2-16.4 0-22.6L256 387.7v-77.5l62.8 36.2 19 70.8c2.2 8.2 10.7 13.1 18.9 10.9l14.9-4c8.2-2.2 13.1-10.7 10.9-18.9l-7-26 33.8 19.5c7.4 4.3 16.8 1.7 21.1-5.7l15.5-26.8c4.3-7.3 1.8-16.8-5.6-21z"
                  fill="currentColor"
                />
              </svg>
               Ice
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-1"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="eco"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-1"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-leaf fa-w-18 "
                data-icon="leaf"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M546.2 9.7c-5.6-12.5-21.6-13-28.3-1.2C486.9 62.4 431.4 96 368 96h-80C182 96 96 182 96 288c0 7 .8 13.7 1.5 20.5C161.3 262.8 253.4 224 384 224c8.8 0 16 7.2 16 16s-7.2 16-16 16C132.6 256 26 410.1 2.4 468c-6.6 16.3 1.2 34.9 17.5 41.6 16.4 6.8 35-1.1 41.8-17.3 1.5-3.6 20.9-47.9 71.9-90.6 32.4 43.9 94 85.8 174.9 77.2C465.5 467.5 576 326.7 576 154.3c0-50.2-10.8-102.2-29.8-144.6z"
                  fill="currentColor"
                />
              </svg>
               Eco
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-2"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="comfort"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-2"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sun fa-w-16 "
                data-icon="sun"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                  fill="currentColor"
                />
              </svg>
               Comfort
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="false"
          class="accordion-button collapsed"
          type="button"
        >
          Debug
        </button>
      </h2>
      <div
        class="accordion-collapse collapse"
      >
        <div
          class="accordion-body"
        >
          <pre>
            {
  "comfort": 22,
  "eco": 16,
  "id": "-MpGOkgR4zExLBUDUafq",
  "mode": "manual",
  "name": "Living room",
  "power": true,
  "temp": 21,
  "type": "radiator",
  "status": "comfort"
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ZoneOverview renders correctly 1`] = `
<DocumentFragment>
  <div
    class="mb-3 accordion"
  >
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="true"
          class="accordion-button"
          type="button"
        >
          Living room
        </button>
      </h2>
      <div
        class="accordion-collapse collapse show"
      >
        <div
          class="accordion-body"
        >
          <ul>
            <li>
              id: -MpGOkgR4zExLBUDUafq
            </li>
            <li>
              temp: 21°
            </li>
            <li>
              type: radiator
            </li>
            <li>
              comfort: 22°
            </li>
            <li>
              eco: 16°
            </li>
            <li>
              temp: 21°
            </li>
            <li>
              power: true
            </li>
            <li>
              mode: manual
            </li>
            <li>
              devices: 2
            </li>
            <ul>
              <li>
                <a
                  href="#/devices/D89DDF3A7D80D89DDF3A7D80"
                >
                  D89DDF3A7D80D89DDF3A7D80
                </a>
              </li>
              <li>
                <a
                  href="#/devices/F9097F334FC4F9097F334FC4"
                >
                  F9097F334FC4F9097F334FC4
                </a>
              </li>
            </ul>
          </ul>
          <div
            class="mt-2 btn-group btn-group-lg"
            role="group"
          >
            <input
              autocomplete="off"
              checked=""
              class="btn-check"
              id="radio-off"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="off"
            />
            <label
              class="btn btn-primary"
              for="radio-off"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-power-off fa-w-16 "
                data-icon="power-off"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
                  fill="currentColor"
                />
              </svg>
               Off
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-0"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="ice"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-0"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-snowflake fa-w-14 "
                data-icon="snowflake"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M440.3 345.2l-33.8-19.5 26-7c8.2-2.2 13.1-10.7 10.9-18.9l-4-14.9c-2.2-8.2-10.7-13.1-18.9-10.9l-70.8 19-63.9-37 63.8-36.9 70.8 19c8.2 2.2 16.7-2.7 18.9-10.9l4-14.9c2.2-8.2-2.7-16.7-10.9-18.9l-26-7 33.8-19.5c7.4-4.3 9.9-13.7 5.7-21.1L430.4 119c-4.3-7.4-13.7-9.9-21.1-5.7l-33.8 19.5 7-26c2.2-8.2-2.7-16.7-10.9-18.9l-14.9-4c-8.2-2.2-16.7 2.7-18.9 10.9l-19 70.8-62.8 36.2v-77.5l53.7-53.7c6.2-6.2 6.2-16.4 0-22.6l-11.3-11.3c-6.2-6.2-16.4-6.2-22.6 0L256 56.4V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v40.4l-19.7-19.7c-6.2-6.2-16.4-6.2-22.6 0L138.3 48c-6.3 6.2-6.3 16.4 0 22.6l53.7 53.7v77.5l-62.8-36.2-19-70.8c-2.2-8.2-10.7-13.1-18.9-10.9l-14.9 4c-8.2 2.2-13.1 10.7-10.9 18.9l7 26-33.8-19.5c-7.4-4.3-16.8-1.7-21.1 5.7L2.1 145.7c-4.3 7.4-1.7 16.8 5.7 21.1l33.8 19.5-26 7c-8.3 2.2-13.2 10.7-11 19l4 14.9c2.2 8.2 10.7 13.1 18.9 10.9l70.8-19 63.8 36.9-63.8 36.9-70.8-19c-8.2-2.2-16.7 2.7-18.9 10.9l-4 14.9c-2.2 8.2 2.7 16.7 10.9 18.9l26 7-33.8 19.6c-7.4 4.3-9.9 13.7-5.7 21.1l15.5 26.8c4.3 7.4 13.7 9.9 21.1 5.7l33.8-19.5-7 26c-2.2 8.2 2.7 16.7 10.9 18.9l14.9 4c8.2 2.2 16.7-2.7 18.9-10.9l19-70.8 62.8-36.2v77.5l-53.7 53.7c-6.3 6.2-6.3 16.4 0 22.6l11.3 11.3c6.2 6.2 16.4 6.2 22.6 0l19.7-19.7V496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-40.4l19.7 19.7c6.2 6.2 16.4 6.2 22.6 0l11.3-11.3c6.2-6.2 6.2-16.4 0-22.6L256 387.7v-77.5l62.8 36.2 19 70.8c2.2 8.2 10.7 13.1 18.9 10.9l14.9-4c8.2-2.2 13.1-10.7 10.9-18.9l-7-26 33.8 19.5c7.4 4.3 16.8 1.7 21.1-5.7l15.5-26.8c4.3-7.3 1.8-16.8-5.6-21z"
                  fill="currentColor"
                />
              </svg>
               Ice
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-1"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="eco"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-1"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-leaf fa-w-18 "
                data-icon="leaf"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 576 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M546.2 9.7c-5.6-12.5-21.6-13-28.3-1.2C486.9 62.4 431.4 96 368 96h-80C182 96 96 182 96 288c0 7 .8 13.7 1.5 20.5C161.3 262.8 253.4 224 384 224c8.8 0 16 7.2 16 16s-7.2 16-16 16C132.6 256 26 410.1 2.4 468c-6.6 16.3 1.2 34.9 17.5 41.6 16.4 6.8 35-1.1 41.8-17.3 1.5-3.6 20.9-47.9 71.9-90.6 32.4 43.9 94 85.8 174.9 77.2C465.5 467.5 576 326.7 576 154.3c0-50.2-10.8-102.2-29.8-144.6z"
                  fill="currentColor"
                />
              </svg>
               Eco
            </label>
            <input
              autocomplete="off"
              class="btn-check"
              id="radio-options--MpGOkgR4zExLBUDUafq-2"
              name="options--MpGOkgR4zExLBUDUafq"
              type="radio"
              value="comfort"
            />
            <label
              class="btn btn-primary"
              for="radio-options--MpGOkgR4zExLBUDUafq-2"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sun fa-w-16 "
                data-icon="sun"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                  fill="currentColor"
                />
              </svg>
               Comfort
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
      >
        <button
          aria-expanded="false"
          class="accordion-button collapsed"
          type="button"
        >
          Debug
        </button>
      </h2>
      <div
        class="accordion-collapse collapse"
      >
        <div
          class="accordion-body"
        >
          <pre>
            {
  "comfort": 22,
  "devices": {
    "D89DDF3A7D80D89DDF3A7D80": true,
    "F9097F334FC4F9097F334FC4": true
  },
  "eco": 16,
  "id": "-MpGOkgR4zExLBUDUafq",
  "mode": "manual",
  "name": "Living room",
  "power": true,
  "temp": 21,
  "type": "radiator",
  "status": "comfort"
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
